# imagesim

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: main.py
src/models/: models.py
src/services/: embedder.py
